# omero-iscc

./: .gitignore  Dockerfile  Dockerfile.dev  Figure_To_Pdf.py  LICENSE  README.md  compose.iscc.yaml  compose.omero.yaml  compose.yaml  pyproject.toml
.github/workflows/: publish.yaml
omero_iscc/: __main__.py  biocode.py  config.py  imagewalk.py  monitor.py  processor.py  service.py  service_manager.py
scripts/: README.md  check_images.py  deploy.py  hash_omero_image.py  image_iteration.py  imgproc.py  iscc_sum_processing.py  make_public.py  metadata.py  omero-iscc.service  process.py  projects.py  test_iscc_annotations.py  test_iscc_service.py  test_simple_upload.py  update_deployment.py  upload.py  verify_annotations.py
